--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
 
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.marceme.marcefirebasechat"
@@ -21,13 +21,14 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:recyclerview-v7:23.+'
-    compile 'de.hdodenhof:circleimageview:2.0.0'
 
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
-    
     compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
 apply plugin: 'com.google.gms.google-services'
