--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.marceme.marcefirebasechat" >
+    package="com.marceme.marcefirebasechat">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -8,11 +8,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,13 +22,11 @@
         <activity
             android:name=".login.LogInActivity"
             android:label="@string/title_activity_log_in"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".register.RegisterActivity"
             android:label="@string/title_activity_register"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.ChatActivity"
             android:label="@string/title_activity_chat"
@@ -38,6 +36,12 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.marceme.marcefirebasechat.ui.MainActivity" />
+        </activity>
+        <activity
+            android:name=".profile.MyProfileActivity"
+            android:label="Profile"
+            android:screenOrientation="portrait">
+
         </activity>
     </application>
 
