--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 
 dependencies {
 
+    compile "com.squareup.picasso:picasso:2.4.0"
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.google.firebase:firebase-database:10.0.1'
