--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.jakewharton:butterknife:8.4.0'
+
+    compile 'com.google.firebase:firebase-storage:10.0.1'
+    compile 'pub.devrel:easypermissions:0.1.9'
+    compile 'com.android.support:appcompat-v7:24.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.jakewharton.butterknife'
