--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.marceme.marcefirebasechat">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -25,11 +24,11 @@
         <activity
             android:name=".login.LogInActivity"
             android:label="@string/title_activity_log_in"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".register.RegisterActivity"
             android:label="@string/title_activity_register"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.ChatActivity"
             android:label="@string/title_activity_chat"
@@ -43,10 +42,7 @@
         <activity
             android:name=".profile.MyProfileActivity"
             android:label="Profile"
-            android:screenOrientation="portrait">
-
-        </activity>
-
+            android:screenOrientation="portrait" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -57,6 +53,9 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
+        <activity android:name=".blogpost.BlogPostActivity" />
+        <activity android:name=".blogpost.PhotoActivity"></activity>
     </application>
 
 </manifest>
