--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 
 
     compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'com.jakewharton:butterknife:8.4.0'
+
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
@@ -37,6 +37,14 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:10.0.1'
     compile 'pub.devrel:easypermissions:0.1.9'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.google.firebase:firebase-config:10.0.1'
+    compile 'com.google.firebase:firebase-appindexing:10.0.1'
+    compile 'com.google.android.gms:play-services-appinvite:10.0.1'
+
+
+
 }
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.jakewharton.butterknife'
